--- a/Api_groupy/WebApplication1/Views/User/RedefinirSenha.cshtml
+++ b/Api_groupy/WebApplication1/Views/User/RedefinirSenha.cshtml
@@ -19,7 +19,7 @@
                 <div asp-validation-summary="ModelOnly" class="val-summary text-danger my-3"></div>
                 <h1 class="text-primary">Redefinição de Senha</h1>
                 <hr>
-                <form asp-action="RedefinirSenha" class="row justify-content-center" method="post">
+                <form asp-action="AlterarSenha" class="row justify-content-center" method="post">
 
                     <div class="form-group mb-3 col-4 d-flex flex-column">
                         @Html.LabelFor(m => m.Email, new { Class = "text-start"} )
@@ -30,7 +30,7 @@
                     <div class="w-100 mt-3"></div>
                     <div class="form-group mb-3 col-4  d-flex flex-column">
                         @Html.LabelFor(m => m.NovaSenha, new { Class = "text-start"})
-                        @Html.TextBoxFor(m => m.NovaSenha , new { Class = "form-control"} )
+                        @Html.TextBoxFor(m => m.NovaSenha , new { Class = "form-control", type="password"} )
                     </div>
                     <span asp-validation-for="@Model.NovaSenha" class="text-danger"></span>
 
@@ -43,7 +43,7 @@
 
                     <div class="col-4 mt-3 d-flex justify-content-between">
                         <a asp-action="Index" asp-controller="Home" class="btn btn-outline-secondary">Cancelar</a>
-                        <button class="btn btn-primary" type="submit">Redefinir</button>
+                        <button class="btn btn-primary" id="btn_submit" type="submit">Redefinir</button>
                     </div>
                 </form>
 
@@ -52,5 +52,6 @@
     </div>
   </body>
 </html>
+
 
 
